--- a/index.html
+++ b/index.html
@@ -1,14 +1,86 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
-  <link href='/style.css' rel='stylesheet'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>운세 마법사</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
-  <script defer type="text/javascript" src="/main.js"></script>
+    <div id="app">
+        <h1>운세 마법사</h1>
+        <p>무엇을 알고 싶으신가요?</p>
+
+        <div class="fortune-tabs">
+            <button class="tab-button active" data-fortune-type="question">질문 운세</button>
+            <button class="tab-button" data-fortune-type="horoscope">별자리 운세</button>
+            <button class="tab-button" data-fortune-type="zodiac">띠별 운세</button>
+            <button class="tab-button" data-fortune-type="tarot">타로 카드</button>
+        </div>
+
+        <div id="question-fortune" class="fortune-section active">
+            <p>질문을 입력하고 운명을 알아보세요!</p>
+            <div class="input-container">
+                <input type="text" id="question" placeholder="무엇이 궁금한가요?">
+                <button id="get-fortune">운세 보기</button>
+            </div>
+        </div>
+
+        <div id="horoscope-fortune" class="fortune-section hidden">
+            <p>당신의 별자리를 선택하고 오늘의 운세를 확인하세요.</p>
+            <div class="input-container">
+                <select id="horoscope-sign">
+                    <option value="">별자리를 선택하세요</option>
+                    <option value="aries">양자리 (3/21~4/19)</option>
+                    <option value="taurus">황소자리 (4/20~5/20)</option>
+                    <option value="gemini">쌍둥이자리 (5/21~6/21)</option>
+                    <option value="cancer">게자리 (6/22~7/22)</option>
+                    <option value="leo">사자자리 (7/23~8/22)</option>
+                    <option value="virgo">처녀자리 (8/23~9/23)</option>
+                    <option value="libra">천칭자리 (9/24~10/22)</option>
+                    <option value="scorpio">전갈자리 (10/23~11/21)</option>
+                    <option value="sagittarius">사수자리 (11/22~12/21)</option>
+                    <option value="capricorn">염소자리 (12/22~1/19)</option>
+                    <option value="aquarius">물병자리 (1/20~2/18)</option>
+                    <option value="pisces">물고기자리 (2/19~3/20)</option>
+                </select>
+                <button id="get-horoscope-fortune">운세 보기</button>
+            </div>
+        </div>
+
+        <div id="zodiac-fortune" class="fortune-section hidden">
+            <p>당신의 띠를 선택하고 오늘의 운세를 확인하세요.</p>
+            <div class="input-container">
+                <select id="zodiac-sign">
+                    <option value="">띠를 선택하세요</option>
+                    <option value="rat">쥐띠</option>
+                    <option value="ox">소띠</option>
+                    <option value="tiger">호랑이띠</option>
+                    <option value="rabbit">토끼띠</option>
+                    <option value="dragon">용띠</option>
+                    <option value="snake">뱀띠</option>
+                    <option value="horse">말띠</option>
+                    <option value="goat">양띠</option>
+                    <option value="monkey">원숭이띠</option>
+                    <option value="rooster">닭띠</option>
+                    <option value="dog">개띠</option>
+                    <option value="pig">돼지띠</option>
+                </select>
+                <button id="get-zodiac-fortune">운세 보기</button>
+            </div>
+        </div>
+
+        <div id="tarot-fortune" class="fortune-section hidden">
+            <p>타로 카드를 한 장 뽑아 오늘의 메시지를 확인하세요.</p>
+            <div class="input-container">
+                <button id="draw-tarot-card">카드 뽑기</button>
+            </div>
+        </div>
+        
+        <div id="fortune-container" class="hidden">
+            <p id="fortune-text"></p>
+        </div>
+    </div>
+    <script src="main.js"></script>
 </body>
 </html>
