Add light/dark theme toggle

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="app">
+        <button class="mode-toggle" id="toggle-theme" type="button" aria-pressed="true">라이트 모드</button>
         <h1>운세 마법사</h1>
         <p>무엇을 알고 싶으신가요?</p>
 
